--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.1'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    implementation 'com.google.firebase:firebase-analytics:17.0.1'
+    implementation 'com.google.firebase:firebase-firestore:20.2.0'
+
+    implementation 'com.google.firebase:firebase-storage:18.1.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
